# cortical_surface-nonfree

./: CMakeLists.txt  README.md  config-cpp-command.template  config-cpp-library.template  cortical_surface-private.bcg  cortical_surface.bcg  project_info.cmake
brainvisa/toolboxes/cortical_surface/: surfaceanalysis.py
brainvisa/toolboxes/cortical_surface/hierarchies/brainvisa-3.0/: cortical_surface.py
brainvisa/toolboxes/cortical_surface/hierarchies/brainvisa-3.1/: cortical_surface.py
brainvisa/toolboxes/cortical_surface/hierarchies/brainvisa-3.1.0/: cortical_surface.py
brainvisa/toolboxes/cortical_surface/hierarchies/flat/: cortical_surface.py
brainvisa/toolboxes/cortical_surface/processes/: 2DGeodesicPrimalSketch.py  CreateLabelTexture.py  SurfaceBasedDetectionPipeline.py  SurfaceBasedSPMtMap.py  TexActivationSimulate.py  TextureValueByClick.py  category_documentation.minf
brainvisa/toolboxes/cortical_surface/types/: cortical_surface.py
cmake/: operto-private-config.cmake.in  operto-private-use.cmake.in
src/: CMakeLists.txt  cortical_surface_src.pro
src/commands/: CMakeLists.txt  cortical_surface_commands.pro
src/commands/AimsCheck2DCoordinate/: CMakeLists.txt  check2DCoordinates.pro  main.cc  vector_operations.h
src/commands/AimsConformalMapping/: conformalMapping.pro  main.cc
src/commands/AimsConstraintCleaner/: CMakeLists.txt  constraintCleaner.pro  main.cc
src/commands/AimsCoordinateGridMesh/: CMakeLists.txt  coordinateGridMesh.pro  main.cc
src/commands/AimsCoordinatesTextureToMesh/: CMakeLists.txt  aimsCoordinatesTextureToMesh.pro  main.cc
src/commands/AimsCoordinatesToIndex/: aimsCoordinatesToIndex.pro  main.cc
src/commands/AimsCoordinatesToTexture/: CMakeLists.txt  aimsCoordinatesToTexture.pro  main.cc
src/commands/AimsCorticalReferential/: CMakeLists.txt  corticalReferential.pro  main.cc
src/commands/AimsCorticalThickness/: AimsCorticalThickness.pro  CMakeLists.txt  main.cc
src/commands/AimsExactDepthArea/: ExactDepthArea.pro  main.cc
src/commands/AimsExtractGyrus/: extractGyrus.pro  main.cc
src/commands/AimsFlattenCortex/: CMakeLists.txt  flattenCortex.pro  main.cc
src/commands/AimsFunctionProjection/: AimsFunctionProjection.pro  CMakeLists.txt  createKernels.cc  createKernels.h  fusions_simultanees.sh  main.cc  projectOntoMesh.cc  projectOntoMesh.h
src/commands/AimsGeodesicPath/: geodesicPath.pro  main.cc
src/commands/AimsGroupGyri/: groupGyri.pro  main.cc
src/commands/AimsGyriRegularization/: gyriModel.cc  gyriModel.h  gyriRegularization.pro  main.cc  mesh_operations.cc  mesh_operations.h  vector_operations.cc
src/commands/AimsGyriStuff/: CMakeLists.txt  gyriStuff.pro  main.cc
src/commands/AimsInterpolateVolumeToSurface/: interpolateVolumeToSurface.pro  main.cc
src/commands/AimsMeshCoordinatesToDecimated/: aimsMeshCoordinatesToDecimated.pro  main.cc
src/commands/AimsMeshIsoLine/: CMakeLists.txt  isoLine.pro  main.cc
src/commands/AimsMeshMedianSurface/: AimsMeshMedianSurface.pro  CMakeLists.txt  main.cc
src/commands/AimsMeshPaint/: glwidget.cc  glwidget.h  main.cc  meshPaint.pro  meshpaint.cc  meshpaint.h
src/commands/AimsMeshToAtlas/: CMakeLists.txt  aimsMeshToAtlas.pro  main.cc
src/commands/AimsMeshToMeshPoint/: main.cc  meshToMesh.pro
src/commands/AimsParameterizeGyri/: AimsParameterizeGyri.pro  CMakeLists.txt  basictex_operations.h  compconn_operations.cc  constraints_operations.cc  gyri_operations.cc  gyri_parameterization.cc  intersec_operations.cc  main.cc  mesh_operations.cc  mesh_operations.h  misctex_operations.cc  misctex_operations.h  model_operations.cc  vector_operations.h  verif_operations.cc  verif_operations.h  vertices_operations.cc  vertices_operations.h
src/commands/AimsParameterizeSulcus/: CMakeLists.txt  main.cc  parameterizesulcus.pro
src/commands/AimsPlotCoordinatesOnMesh/: aimsPlotCoordinatesOnMesh.pro  main.cc
src/commands/AimsPlotOnSphericalAtlas/: CMakeLists.txt  main.cc  plotonatlas.pro
src/commands/AimsSulcalLines/: main.cc  sulcalLines.pro
src/commands/AimsSulcusCorticalSnake/: CMakeLists.txt  main.cc  sulcusCorticalSnake.pro
src/commands/AimsSulcusNormalizeDepthProfile/: main.cc  sulcusNormalizeDepthProfile.pro
src/commands/AimsTextureCompare/: main.cc  textureCompare.pro
src/commands/AimsTextureToAtlas/: CMakeLists.txt  aimsTextureToAtlas.pro  main.cc
src/commands/PlotFociForValidation/: main.cc  oldMain.cc.bckup  plotFociForValidation.pro
src/commands/surfAnalyzeGroupGraph/: main.cc  surfAnalyzeGroupGraph.pro
src/commands/surfLabelsTex2Graph/: blobs.cc  blobs.h  main.cc  surfLabelsTex2Graph.pro
src/commands/surfMesh2Graph/: main.cc  surfMesh2Graph.pro
src/commands/surfResultsSignificance/: main.cc  surfResultsSignificance.pro
src/commands/surfStructuralAnalysis/: anneal.cc  anneal.h  cliques.cc  cliques.h  cluster.cc  cluster.h  icm.cc  icm.h  iograph.cc  iograph.h  main.cc  meshdistance.cc  meshdistance.h  minimization.cc  minimization.h  old_anneal.cc  old_anneal.h  sites.cc  sites.h  surfStructuralAnalysis.pro  validation.cc  validation.h
src/commands/surfSubjectGraph2Group/: main.cc  surfSubjectGraph2Group.pro
src/commands/surfTexActivationSimulation/: CMakeLists.txt  main.cc  surfTexActivationSimulation.pro
(+21 files in other folders)
