ADD_SUBDIRECTORY(AimsConstraintCleaner)
ADD_SUBDIRECTORY(AimsGyriStuff)
ADD_SUBDIRECTORY(AimsCorticalReferential)
ADD_SUBDIRECTORY(AimsMeshIsoLine)
ADD_SUBDIRECTORY(AimsCorticalThickness)
ADD_SUBDIRECTORY(AimsFunctionProjection)
ADD_SUBDIRECTORY(AimsMeshMedianSurface)
ADD_SUBDIRECTORY(AimsCoordinateGridMesh)
ADD_SUBDIRECTORY(AimsCoordinatesTextureToMesh)
ADD_SUBDIRECTORY(AimsCoordinatesToTexture)
ADD_SUBDIRECTORY(AimsFlattenCortex)
ADD_SUBDIRECTORY(AimsParameterizeGyri)
ADD_SUBDIRECTORY(AimsParameterizeSulcus)
ADD_SUBDIRECTORY(AimsPlotOnSphericalAtlas)
ADD_SUBDIRECTORY(AimsSulcusCorticalSnake)
ADD_SUBDIRECTORY(AimsTextureToAtlas)
ADD_SUBDIRECTORY(surfTexActivationSimulation)
ADD_SUBDIRECTORY(AimsCheck2DCoordinate)
ADD_SUBDIRECTORY(AimsMeshToAtlas)
